--- a/getStarted/src/styles/base/_general.scss
+++ b/getStarted/src/styles/base/_general.scss
@@ -1,5 +1,123 @@
-h1, h2, h3, h4, h5, h6, ul, body {
-    margin: 0;
-    padding: 0;
+h1{
+    @include font(35px, $font-bold);
+}
+h2{
+    @include font(33px, $font-medium, $pr4-dark-2);
+    padding: 10px;
+    &:hover{
+        color: $pr1-light-3;
+        background-color: $primery-1;
+    }
+}
+h3{
+    @include font(27px);
+}
+h4{
+    @include font(22px);
+}
+h5{
+    @include font(17px);
+}
+h6{
+    @include font(15px);
+}
+p{
+    @include font(14px, $font-regular, $pr4-dark-1);
+}
+sub{
+    @include font(20px, $font-medium, $pr4-dark-1);
+    padding: 10px;
+    &:hover{
+        color: $pr1-light-3;
+        background-color: $primery-1;
+    }
+}
+.quotation {
+    border-left: 3px solid $primery-1;
+    background-color: $pr1-light-3;
+    padding: 10px 20px;
+    @include font(17px, $font-regular, $primery-1)
+  }
+
+.pagination {
+    display: inline-block;
+    margin: 10px;
+  }
+  
+.pagination a {
+    color: $pr4-light-1;
+    float: left;
+    padding: 20px 25px;
+    text-decoration: none;
+    margin: 5px;
+  }
+  
+.pagination a.active {
+    background-color: $primery-1;
+    color: white;
+    border-radius: 50%;
+  }
+  
+  .pagination a:hover:not(.active) {
+    background-color: #ddd;
+    border-radius: 50%;
+  }
+/*dotted */
+.dotted-pagination{
+    margin: 10px;
+    font-size: 10px;
+    background-color: $pr4-light-2;
+    border: solid red 1px;
+}
+button-dec{
+    ;
+}
+.button-dec{
+    text-align: center;
+}
+.button-1{
+    width: 16px;
+    height: 16px;
+    border-radius: 50%;
+    background-color: $pr4-light-2;
+    border: none;
+    margin: 5px;
+    padding: 0px;
+}
+.button-1:hover{
+    width: 16px;
+    height: 16px;
+    border: solid $pr1-light-1 4px;
+    background-color: #fff;
+    border-radius: 50%;
 }
 
+/*social*/
+.fa {
+    padding: 7px;
+    font-size: 30px;
+    width: 30px;
+    text-align: center;
+    text-decoration: none;
+    margin: 2px 10px;
+    border-radius: 50%;
+    float: left;
+    ;
+}
+.fa-facebook, .fa-twitter, .fa-google-plus-g, .fa-pinterest {
+    border: solid #fff 1px;
+    color: #fff;
+}
+.fa:hover {
+    color: #fff;
+    border: solid $pr1-dark-1 1px;
+    background-color: $pr1-dark-1; 
+}
+.social{
+    width: 200px;
+    height: 40px;
+    margin: auto;
+}
+body{
+    background-color:#000;
+}
